// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate-zod > generates a simple object schema 1`] = `
"// This file was generated by openapi-tools. Do not edit.

import { z } from 'zod/v4';

export const user = z.object({
  id: z.string()
});
"
`;

exports[`generate-zod > generates enums and nested arrays 1`] = `
"// This file was generated by openapi-tools. Do not edit.

import { z } from 'zod/v4';

export const wrapper = z.array(status);
"
`;
